--- a/st-vue-example/package.json
+++ b/st-vue-example/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "browser-md5-file": "^1.1.1",
     "crypto-js": "^4.1.1",
     "jsrsasign": "^10.5.20",
     "qs": "^6.10.5",
