--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <groupId>vip.ylove</groupId>
     <artifactId>st-encrypt-sdk-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>1.2.0</version>
+    <version>1.2.1</version>
     <description>Spring Boot 接口请求参数自动加解密</description>
     <url>https://github.com/catcancry/st-encrypt</url>
 
@@ -67,6 +67,10 @@
                 <configuration>
                     <source>${compile.version}</source>
                     <target>${compile.version}</target>
+                    <!-- 编译后保持方法形参名称不变 -->
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <!-- Javadoc -->
