--- a/st-encrypt-sdk-spring-boot-starter/pom.xml
+++ b/st-encrypt-sdk-spring-boot-starter/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>vip.ylove</groupId>
         <artifactId>st-encrypt-sdk-parent</artifactId>
-        <version>1.2.1</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>st-encrypt-sdk-spring-boot-starter</artifactId>
@@ -20,20 +20,27 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <optional>true</optional>
-            <version>${springboot-version}</version>
+            <version>${spring-boot.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
-            <version>${springboot-version}</version>
+            <version>${spring-boot.version}</version>
         </dependency>
 
         <dependency>
             <groupId>vip.ylove</groupId>
             <artifactId>st-encrypt-sdk</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${revision}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-extra</artifactId>
+            <version>${hutool.version}</version>
         </dependency>
     </dependencies>
+
 </project>
