--- a/st-encrypt-sdk/pom.xml
+++ b/st-encrypt-sdk/pom.xml
@@ -9,17 +9,11 @@
     <parent>
         <groupId>vip.ylove</groupId>
         <artifactId>st-encrypt-sdk-parent</artifactId>
-        <version>1.2.1</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>st-encrypt-sdk</artifactId>
     <name>${project.artifactId}</name>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-    </properties>
 
     <dependencies>
         <dependency>
