--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
 
     <properties>
-        <revision>3.0.0</revision>
+        <revision>3.0.1</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>17</java.version>
@@ -23,6 +23,7 @@
         <spring-boot.version>3.1.3</spring-boot.version>
         <hutool.version>5.8.20</hutool.version>
         <slf4j-api.version>2.0.7</slf4j-api.version>
+        <jackson.version>2.15.2</jackson.version>
 
         <!-- 插件版本 -->
         <maven-compiler-plugin.verison>3.11.0</maven-compiler-plugin.verison>
@@ -32,8 +33,8 @@
     <modules>
         <module>st-encrypt-sdk</module>
         <module>st-encrypt-sdk-spring-boot-starter</module>
-<!--        <module>spring-boot-example-server</module>-->
-<!--        <module>spring-boot-example-client</module>-->
+        <module>spring-boot-example-server</module>
+        <module>spring-boot-example-client</module>
     </modules>
 
 
@@ -85,7 +86,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>3.5.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -100,7 +101,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.2.1</version>
+                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <id>oss</id>
@@ -130,7 +131,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
-                <version>1.6</version>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <id>oss</id>
@@ -145,7 +146,7 @@
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.8</version>
+                <version>1.6.13</version>
                 <extensions>true</extensions>
                 <configuration>
                     <serverId>oss</serverId>
