--- a/spring-boot-example-client/pom.xml
+++ b/spring-boot-example-client/pom.xml
@@ -11,14 +11,10 @@
 
     <groupId>vip.ylove</groupId>
     <artifactId>spring-boot-example-client</artifactId>
-    <version>1.0</version>
-
+    <version>${revision}</version>
 
     <properties>
-        <java.version>1.8</java.version>
-        <compile.version>1.8</compile.version>
-        <spring.cloud-version>2021.0.1</spring.cloud-version>
-        <st-encrypt-sdk.version>1.2.1</st-encrypt-sdk.version>
+        <spring.cloud-version>2022.0.4</spring.cloud-version>
     </properties>
 
     <dependencyManagement>
@@ -71,7 +67,7 @@
         <dependency>
             <groupId>vip.ylove</groupId>
             <artifactId>st-encrypt-sdk</artifactId>
-            <version>${st-encrypt-sdk.version}</version>
+            <version>${revision}</version>
         </dependency>
 
         <dependency>
