--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
     <modules>
         <module>st-encrypt-sdk</module>
         <module>st-encrypt-sdk-spring-boot-starter</module>
-        <module>spring-boot-example-server</module>
-        <module>spring-boot-example-client</module>
+<!--        <module>spring-boot-example-server</module>-->
+<!--        <module>spring-boot-example-client</module>-->
     </modules>
 
 
