--- a/st-encrypt-sdk/pom.xml
+++ b/st-encrypt-sdk/pom.xml
@@ -9,17 +9,11 @@
     <parent>
         <groupId>vip.ylove</groupId>
         <artifactId>st-encrypt-sdk-parent</artifactId>
-        <version>1.2.1</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>st-encrypt-sdk</artifactId>
     <name>${project.artifactId}</name>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -28,14 +22,14 @@
             <version>${hutool.version}</version>
         </dependency>
         <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-json</artifactId>
-            <version>${hutool.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
     </dependencies>
 
